--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,9 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: echo "cd ${{ inputs.topdir }} && $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}"
+    - run: cd ${{ inputs.topdir }}
       shell: bash
-    - run: cd ${{ inputs.topdir }} && $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
+    - run: echo "$(pwd) - $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}"
+      shell: bash
+    - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
