oh yea, the loc is fake

--- a/.github/workflows/action_test.yml
+++ b/.github/workflows/action_test.yml
@@ -16,6 +16,6 @@ jobs:
     - name: Run action
       uses: nebularg/packager@actionfun
       with:
-        args: -L
+        args: -ldp 1
       env:
         CF_API_KEY: ${{ secrets.CF_API_KEY }}
