--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
   steps:
     - run: cd ${{ inputs.topdir }}
       shell: bash
-    - run: echo "$(pwd) - $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}"
+    - run: echo "$( basename "$GITHUB_ACTION_PATH/release.sh" ) ${{ inputs.args }}"
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
