--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: cd ${{ inputs.topdir }}
+    - run: cd ${${{ inputs.topdir }}//\\/\/}
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
