--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ branches:
     - actionfun
 
 script:
-  - git checkout https://github.com/nebularg/PackagerTest.git ~/nebularg/PackagerTest
-  - $TRAVIS_BUILD_DIR/release.sh -t ~/nebularg/PackagerTest -ldp 1
+  - git checkout https://github.com/nebularg/PackagerTest.git /home/travis/build/nebularg/PackagerTest
+  - $TRAVIS_BUILD_DIR/release.sh -t /home/travis/build/nebularg/PackagerTest -ldp 1
 
 notifications:
   email: false
