--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
 runs:
   using: composite
   steps:
-    - run: pandoc -v &>/dev/null || curl -sL $(curl -s https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url') | sudo tar xzf - --strip-components 1 -C /usr/local; pandoc -v
+    - run: pandoc -v &>/dev/null || {[ -n "$WOWI_API_TOKEN" ] && curl -sL $(curl -s https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url') | sudo tar xzf - --strip-components=1 -C /usr/local &>/dev/null;} || true
       shell: bash
     - run: cd ${{ inputs.path }}
       shell: bash
