--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     required: false
     default: ${{ github.workspace }}
   args:
-    description: 'Command-Line Arguments'
+    description: 'Command-line arguments'
     required: false
     default: ''
 runs:
