--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,8 @@ runs:
   using: composite
   steps:
     # force pandoc on the container
-    - run: pandoc -v &>/dev/null || { [ -n "$WOWI_API_TOKEN" ] && curl -sL $(curl -s https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url') | sudo tar xzf - --strip-components=1 -C /usr/local &>/dev/null; } || true
+    - run: pandoc -v &>/dev/null || { [ -n "$WOWI_API_TOKEN" ] && curl -sL "$(curl -s https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url' 2>/dev/null)" | sudo tar xzf - --strip-components=1 -C /usr/local &>/dev/null; } || true
       shell: bash
+    # curl is scary
     - run: cd ${{ inputs.path }} && $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
