--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
 runs:
   using: composite
   steps:
-    # install pandoc if appropriate
+    # install pandoc if appropriate. this keeps parity with the docker action (but you should probably apt install it)
     - run: pandoc -v &>/dev/null || { [ -n "$WOWI_API_TOKEN" ] && curl -sfL "$(curl -sf https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url' 2>/dev/null)" | sudo tar -xzf - --strip=1 -C /usr/local &>/dev/null; } || true
       shell: bash
     # curl is scary
