--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,8 @@ runs:
     # install pandoc if appropriate. this keeps parity with the docker action (but you should probably apt install it)
     - run: pandoc -v &>/dev/null || { [ -n "$WOWI_API_TOKEN" ] && curl -sfL "$(curl -sf https://api.github.com/repos/jgm/pandoc/releases/latest | jq -r '.assets[] | select(.content_type == "application/x-gzip") | .browser_download_url' 2>/dev/null)" | sudo tar -xzf - --strip=1 -C /usr/local &>/dev/null; } || true
       shell: bash
+    - run: echo "where am i? $(pwd)"
+      shell: bash
     # curl is scary
     - run: cd ${{ inputs.path }} && $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
