--- a/action.yml
+++ b/action.yml
@@ -10,7 +10,7 @@ runs:
   using: composite
   steps:
     # install pandoc if appropriate
-    - run: test -n "$WOWI_API_TOKEN" && sudo apt-get install -yq pandoc &>/dev/null || true
+    - run: test -n "$WOWI_API_TOKEN" && sudo apt-get install -yq pandoc || true
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
