--- a/.github/workflows/action_test.yml
+++ b/.github/workflows/action_test.yml
@@ -12,12 +12,12 @@ jobs:
 
     steps:
     - name: Checkout test addon
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
       with:
-        repository: nebularg/PackagerTest
-        fetch-depth: 0
+        repository: BigWigsMods/BigWigs
+        fetch-depth: 50
 
     - name: Run action
       uses: nebularg/packager@actionfun
       with:
-        args: -ldp 1
+        args: -ldp1w1
