--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
   using: composite
   steps:
     # install pandoc if appropriate
-    - run: '[[ -n "$WOWI_API_TOKEN" && "$INPUT_PANDOC" == "true" ]] && sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]Getting pandoc version\n[command]pandoc --version\n$(pandoc --version)\n##[endgroup]\n" || true'
+    - run: sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]Getting pandoc version\n[command]pandoc --version\n$(pandoc --version)\n##[endgroup]\n"
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
