--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ runs:
     # install pandoc if appropriate
     - run: sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]pandoc version\n[command]pandoc --version\n$(pandoc --version)\n##[endgroup]"
       shell: bash
-    - run: echo "wowi:${WOWI_API_TOKEN:+set}; pandoc:$INPUTS_PANDOC;"
+    - run: echo "wowi:${WOWI_API_TOKEN:+set}; pandoc:${{ inputs.pandoc }};"
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
