--- a/action.yml
+++ b/action.yml
@@ -10,12 +10,14 @@ inputs:
   pandoc:
     description: 'Install pandoc before packaging if uploading to WoWInterface.'
     required: false
-    default: true
+    default: 'true'
 runs:
   using: composite
   steps:
-    # install pandoc if appropriate
-    - run: '[[ -n "$WOWI_API_TOKEN" && "${{ inputs.pandoc }}" == "true" ]] && sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]Install pandoc\n[command]pandoc --version\n$(pandoc --version)\n##[endgroup]" || true'
+    - run: |
+        if [[ -n "$WOWI_API_TOKEN" && "${{ github.ref }}" == "refs/tags/"* && "${{ inputs.pandoc }}" == "true" ]] && ! hash pandoc &>/dev/null; then
+          sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]Install pandoc\\n[command]pandoc --version\\n$( pandoc --version )\\n##[endgroup]"
+        fi
       shell: bash
     - run: $GITHUB_ACTION_PATH/release.sh ${{ inputs.args }}
       shell: bash
