--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
   using: composite
   steps:
     - run: |
-        if [[ -n "$WOWI_API_TOKEN" && "${{ github.ref }}" == "refs/tags/"* && "${{ inputs.pandoc }}" == "true" ]] && ! hash pandoc &>/dev/null; then
+        if [[ -n "$WOWI_API_TOKEN" && "${{ inputs.pandoc }}" == "true" ]] && ! hash pandoc &>/dev/null; then
           sudo apt-get install -yq pandoc &>/dev/null && echo -e "##[group]Install pandoc\\n[command]pandoc --version\\n$( pandoc --version )\\n##[endgroup]"
         fi
       shell: bash
