--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,7 @@ jobs:
           tag=${GITHUB_REF#refs/tags/}
           short_tag=${tag%%.*}
           git config advice.nestedTag false
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "<>"
           git tag -f "$short_tag" "$tag" -m "Update $short_tag to $tag"
           git push -f origin "$short_tag"
